<resources>

    <string name="app_chinese_name">御宅工作</string>

    <!--fragment_register-->
    <string name="register_comfirm_pswd_hint">确认密码</string>
    <string name="register_stroll_textview">闲逛</string>
    <string name="register_code_hint">验证码</string>
    <string name="register_phone_num_hint">手机号码</string>
    <string name="register_register_button">注  册</string>
    <string name="register_get_code_button">获取验证码</string>
    <string name="register_login_textview">登录</string>

    <!--activiry_login-->
    <string name="username">手机号码</string>
    <string name="password">密码</string>
    <string name="login">登  录</string>
    <string name="forget_psw">忘记密码</string>
    <string name="login_register">注册</string>

    <!--fragment_order-->
    <string name="ordername">订单界面</string>

    <!--fragment_publish-->
    <string name="publishname">发布界面</string>
    <string name="projectprice">项目金额</string>
    <string name="publish_submit">提交</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
