<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.yuzhai.ui.LoginActivity">

    <ImageView
        android:id="@+id/imageview"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/login_imageview_logo_height" />

    <RelativeLayout
        android:id="@+id/relayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageview"
        android:layout_marginLeft="@dimen/login_relativeLayout_marginLeftR"
        android:layout_marginRight="@dimen/login_relativeLayout_marginLeftR">

        <EditText
            android:id="@+id/username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_editable_first_marginT"
            android:background="@color/colorgary"
            android:hint="@string/username"
            android:maxLength="20"
            android:padding="@dimen/login_editable_middle_padding"
            android:singleLine="true" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username"
            android:layout_marginTop="@dimen/login_editable_second_marginT"
            android:background="@color/colorgary"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="16"
            android:padding="@dimen/login_editable_middle_padding"
            android:singleLine="true" />


    </RelativeLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relayout1"
        android:layout_marginLeft="@dimen/login_relativeLayout_marginLeftR"
        android:layout_marginRight="@dimen/login_relativeLayout_marginLeftR"
        android:layout_marginTop="@dimen/login_button_marginT"
        android:background="@drawable/register_button_registerlogin_style"
        android:text="@string/login"
        android:textSize="@dimen/login_button_login_textsize"
        />


    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_relativeLayout_marginLeftR"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/login_register"
        android:textSize="@dimen/login_textview_last_textsize"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/register"
        android:text="@string/forget_psw"
        android:textSize="@dimen/login_textview_last_textsize"/>

    <TextView
        android:id="@+id/stroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="@dimen/login_relativeLayout_marginLeftR"
        android:layout_alignParentRight="true"
        android:text="@string/stroll"
        android:textSize="@dimen/login_textview_last_textsize"/>

</RelativeLayout>
