<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:toolbar="http://schemas.android.com/apk/res-auto"
    tools:context="com.yuzhai.ui.ForgetPswActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/changepsw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mainColor"
        toolbar:titleTextColor="#FFFFFF"
        toolbar:logo="@drawable/out"
         >
        <TextView
            android:layout_marginLeft="100dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="修改密码"
            android:textColor="@color/colorwhite"
            android:textSize="20sp"
            />

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/relayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/changepsw"
        android:layout_marginLeft="@dimen/register_relativeLayout_marginLeftR"
        android:layout_marginRight="@dimen/register_relativeLayout_marginLeftR">

        <EditText
            android:id="@+id/phone_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/register_editable_first_marginT"
            android:background="@color/colorgary"
            android:hint="@string/register_phone_num_hint"
            android:inputType="number"
            android:maxLength="11"
            android:padding="@dimen/register_editable_middle_padding"
            android:singleLine="true" />

        <LinearLayout
            android:id="@+id/linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone_num"
            android:layout_marginTop="@dimen/register_editable_middle_marginT"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/code_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:background="@color/colorgary"
                android:hint="@string/register_code_hint"
                android:inputType="number"
                android:maxLength="6"
                android:padding="@dimen/register_editable_middle_padding"
                android:singleLine="true" />

            <Button
                android:id="@+id/code_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/register_button_code_marginL"
                android:layout_weight="2"
                android:padding="0dp"
                android:text="@string/register_get_code_button" />
        </LinearLayout>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearlayout"
            android:layout_marginTop="@dimen/register_editable_middle_marginT"
            android:background="@color/colorgary"
            android:hint="新密码"
            android:inputType="textPassword"
            android:maxLength="16"
            android:padding="@dimen/register_editable_middle_padding"
            android:singleLine="true" />

    </RelativeLayout>

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relayout1"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/register_button_registerlogin_style"
        android:text="修改密码"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/register_button_register_textsize" />

</RelativeLayout>
